can edit api key of an api datasource
